--- a/NWO_RegionNode/NWO_RegionNode.csproj
+++ b/NWO_RegionNode/NWO_RegionNode.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="DotNetty.Codecs" Version="0.7.2" />
     <PackageReference Include="DotNetty.Common" Version="0.7.2" />
     <PackageReference Include="DotNetty.Transport" Version="0.7.2" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.10" />
   </ItemGroup>
 
   <ItemGroup>
