fix:발판인덱스 확장

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@
 .vs/NWO_RegionNode/v17/.suo
 .vs/NWO_RegionNode/v17/DocumentLayout.backup.json
 .vs/NWO_RegionNode/v17/DocumentLayout.json
+/.vs/NWO_RegionNode/v17
+/.vs/NWO_RegionNode/v17
+/.vs/NWO_RegionNode/v17
+/.vs/NWO_RegionNode/CopilotIndices
+/.vs
+/.vs/NWO_RegionNode/CopilotIndices
+/.vs/NWO_RegionNode/v17
